@@ -2,6 +2,9 @@
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  07 Jan 2013; Sergey Popov <pinkbyte@gentoo.org> libsdl-2.0.0_pre6799.ebuild:
+  Use versionator eclass for getting revision
+
 *libsdl-2.0.0_pre6799 (04 Jan 2013)
 
   04 Jan 2013; Azamat H. Hackimov <azamat.hackimov@gmail.com>
